apps/maistokainos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maistokainos
  labels:
    app: maistokainos
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: maistokainos
  template:
    metadata:
      labels:
        app: maistokainos
      annotations:
        profiles.grafana.com/cpu.scrape: "true"
        profiles.grafana.com/goroutine.scrape: "true"
        profiles.grafana.com/memory.scrape: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: n200
      containers:
        - name: maistokainos
          image: gedulis12/maistokainos.lt:0.0.16
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - name: maistokainos-pvc
              mountPath: "/localdata"
      volumes:
        - name: maistokainos-pvc
          persistentVolumeClaim:
            claimName: maistokainos-pvc
      imagePullSecrets:
        - name: dockerhub-creds
