apps/maistokainos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maistokainos
  annotations:
    k8s.grafana.com/scrape: "true"
    k8s.grafana.com/metrics.portName: "metrics"
spec:
  selector:
    app: maistokainos
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 8081
      targetPort: 8081
